# RenderingExperiments

./: .gitignore  CMakeLists.txt  README.md  run.bat  runMandelbulb.bat  runNoise.bat
collada/: CMakeLists.txt  collada.cpp  colladaSceneBuilder.cpp  colladaTreeBuilder.cpp  colladaTreeBuilder.h
collada/include/: collada.h  colladaEntities.h
data/: lib.json
data/collada/: cube.dae
data/misc/: canvas.txt  canvasRenderer.txt  cloud.hlsl  cloudSettings.txt  compute.hlsl  compute.txt  cube.hlsl  cube.txt  defferedShading.hlsl  defferedShading.txt  displayCube.txt  displayPlain.txt  displayWorly.txt  gBuffer.txt  grammar.txt  hosek_sky.hlsl  inc.txt  inputManager.txt  main.txt  math.txt  plainShader.hlsl  shaders.hlsl  shaders2.hlsl  test_code.txt  tok_test.txt  unlit2.hlsl  utils.txt  worlyCompute.txt
data/misc/materials/: cloudMaterial.txt  litMaterial.txt  skyBoxMat.txt
data/misc/primitives/: cube.txt  plane.txt
data/misc/resources/: resourceUtils.txt
data/misc/scene/: scene.txt
data/scripts/: backup.txt  cloud.hlsl  collada_grammar.txt  compute.hlsl  defferedShading.hlsl  displayCube.txt  displayWorly.txt  gBuffer.txt  grammar.txt  inputManager.txt  main.txt  mandelbulb.txt  math.txt  noise.txt  object.txt  primitives.txt  raymarch.txt  renderer.txt  resources.txt  scene.txt  scripting_object.txt  setupScene.txt  shaders.hlsl  sky.hlsl  unlit.hlsl  utils.txt  worlyCompute.txt
data/scripts/clouds/: settings.json  settings.txt  worlyCompute.txt
data/scripts/collada/: cube.dae
data/scripts/compute/: noiseTexture.txt
data/scripts/deprecated/: cube.hlsl  plainShader.hlsl
data/scripts/materials/: canvasMat.txt  cloudMat.txt  cloudMaterial.txt  simpleUnlitMat.txt  skyMat.txt  unlitMaterial.txt
data/scripts/noise/: canvasMaterial.txt
data/scripts/primitives/: canvas.txt  cube.txt  plane.txt
data/scripts/raymarch/: raymarchMaterial.txt
data/scripts/resources/: resourceUtils.txt
data/scripts/scene/: colladaScene.txt
data/scripts/settings/: mandelbulbSettings.json
data/scripts/shaders/: blank.hlsl  card.hlsl  cloudArea.hlsl  computeNoise.hlsl  cs_compute.fxc  cs_computeNoise.fxc  hosek.hlsl  mandelbulb.hlsl  perlinNoise.hlsl  perlinNoiseCircle.hlsl  perlinNoiseCurves.hlsl  preetham.hlsl  ps_blank.fxc  ps_card.fxc  (+25 more)
data/shaders/: canvas.hlsl  canvas_vs.hlsl  checkers.hlsl  cs.hlsl  lighting.hlsl  ps.hlsl  vs.hlsl
dataLib/: CMakeLists.txt  dataLib.cpp
dataLib/include/: dataLib.h
gc/: CMakeLists.txt  garbageCollector.cpp  garbageCollector.h  nativeFunc.cpp  nativeObject.cpp  utils.cpp  value.cpp
gc/include/: garbageCollector.h  nativeFunc.h  nativeObject.h  utils.h  value.h
interpreter/: CMakeLists.txt  IFunc.cpp  ISession.cpp  calculator.cpp  calculator.h  func.cpp  func.h  garbageCollector.h  interpreter.cpp  interpreter.h  list.cpp  list.h  object.cpp  object.h  scope.cpp  scope.h  scriptingValue.cpp  session.cpp  session.h
interpreter/include/: IFunc.h  ISession.h  interpreter.h  list.h  object.h  scriptingValue.h
main/: CMakeLists.txt  main.cpp
parser/: CMakeLists.txt  codeSource.cpp  codeSourceContainer.cpp  codeSourceContainer.h  grammar.cpp  parser.cpp  parserState.cpp  parserState.h  parserTable.cpp  parserTable.h  rule.cpp  rule.h  symbol.cpp  tokenizer.cpp  tokenizer.h
parser/include/: codeSource.h  grammar.h  parser.h  symbol.h
rendering/: CMakeLists.txt  IDXResource.h  IRenderStage.h  api.cpp  core.cpp  d3dx12.h  dxBuffer.cpp  dxBuffer.h  dxCanvasCL.cpp  dxCanvasCL.h  dxCanvasCommandList.cpp  dxCanvasCommandList.h  dxClearRTCL.cpp  dxClearRTCL.h  dxCommandList.cpp  dxCommandList.h  dxCommandQueue.cpp  dxCommandQueue.h  dxComputeCL.cpp  dxComputeCL.h  dxComputeCommandQueue.cpp  dxComputeCommandQueue.h  dxComputeShader.cpp  dxComputeShader.h  dxCopyCL.cpp  dxCopyCL.h  dxCopyCommandQueue.cpp  dxCopyCommandQueue.h  dxDescriptorHeap.cpp  dxDescriptorHeap.h  dxDevice.cpp  dxDevice.h  dxFence.cpp  dxFence.h  dxFenceEvent.cpp  dxFenceEvent.h  dxHeap.cpp  dxHeap.h  dxPixelShader.cpp  dxPixelShader.h  (+18 more)
rendering/CL/: dxClearRTCL.cpp  dxClearRTCL.h  dxDisplay3DCL.cpp  dxDisplay3DCL.h  dxDisplayWorlyCL.cpp  dxDisplayWorlyCL.h  dxGeometryPassEndCL.cpp  dxGeometryPassEndCL.h  dxGeometryPassStart.cpp  dxGeometryPassStartCL.cpp  dxGeometryPassStartCL.h  dxPlainCL.cpp  dxPlainCL.h  dxRender3DCL.cpp  dxRender3DCL.h  dxWorlyTextureComputeCL.cpp  dxWorlyTextureComputeCL.h
rendering/aux/: dxCamera.cpp  dxCamera.h  inputHandler.h
rendering/clouds/: cloudSettingsReader.cpp  cloudSettingsReader.h  dxCloudsCamera.cpp  dxCloudsCamera.h  dxWorlyTextureComputeCL.cpp  dxWorlyTextureComputeCL.h
rendering/compute/: dxNoiseTexture.cpp  dxNoiseTexture.h
rendering/deferred/: dxCloudMatCL.cpp  dxCloudMatCL.h  dxDisplay3DCL.cpp  dxDisplay3DCL.h  dxLitMatCL.cpp  dxLitMatCL.h  dxLitPassCL.cpp  dxLitPassCL.h  dxUnlitMatCL.cpp  dxUnlitMatCL.h  gBuffer.cpp  gBuffer.h
rendering/helper/: cloudSettingsReader.cpp  cloudSettingsReader.h  dxCamera.cpp  dxCamera.h  dxUpdater.cpp  dxUpdater.h  iUpdater.h  inputHandler.h
rendering/include/: api.h  core.h  window.h
rendering/materials/: IMaterial.h  IMaterialRepo.h  dxCanvasMat.cpp  dxCanvasMat.h  dxCloudMat.cpp  dxCloudMat.h  dxCloudMatCL.cpp  dxCloudMatCL.h  dxMaterialRepo.cpp  dxMaterialRepo.h  dxSimpleUnlitMat.cpp  dxSimpleUnlitMat.h  dxSkyMat.cpp  dxSkyMat.h  dxUnlitMatCL.cpp  dxUnlitMatCL.h
rendering/noise/: dxCanvasMatCL.cpp  dxCanvasMatCL.h
rendering/primitives/: cube.cpp  cube.h  dxCamera.cpp
rendering/raymarching/: dxRayMarchCamera.cpp  dxRayMarchCamera.h  dxRayMarchMatCL.cpp  dxRayMarchMatCL.h
rendering/renderstage/: dxCanvasPass.cpp  dxCanvasPass.h  dxClearDSRS.cpp  dxClearDSRS.h  dxClearRTRS.cpp  dxClearRTRS.h  dxCloudPass.cpp  dxCloudPass.h  dxRenderPass.cpp  dxRenderPass.h  dxSkyPass.cpp  dxSkyPass.h  dxUnlitPass.cpp  dxUnlitPass.h
rendering/scene/: IMeshRepo.h  IScene.h  dxMesh.cpp  dxMesh.h  dxMeshRepo.cpp  dxMeshRepo.h  dxScene.cpp  dxScene.h
scripting/: CMakeLists.txt  main.cpp
shadersCompiler/app/: compileServer.js  index.html  loadSettingsData.js  main.js  pipeServer.js
